<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchBtn"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/newGroupBtn"
        android:title="@string/new_group"
        android:icon="@drawable/baseline_add_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/profileBtn"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logoutBtn"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="ifRoom" />
</menu>