<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/groupItemView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#DADADA"
    android:padding="12dp">

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:maxWidth="120dp"
        android:maxLines="1"
        android:text="@string/default_group_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/groupMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/default_member_count"
        android:textColor="#787878"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/eventTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/notificationIcon"
        android:textAlignment="textEnd"
        android:ellipsize="end"
        android:maxWidth="100dp"
        android:maxLines="1"
        android:text="@string/default_event_time" />

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/notification_indicator"
        app:srcCompat="@drawable/baseline_notifications_none_24" />
</RelativeLayout>